# sdd-server

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/: README.md
docs/api/: README.md  prompts.md  resources.md  tools.md
docs/development/: architecture.md  plugins.md
docs/usage/: README.md
specs/: arch.md  prd.md  tasks.md
specs/features/spec-bootstrapper/: arch.md  prd.md  tasks.md
specs/features/spec-decomposer/: arch.md  prd.md  tasks.md
specs/features/spec-linter/: arch.md  prd.md  tasks.md
specs/recipes/: architect.yaml  devops-engineer.yaml  edge-case-analyst.yaml  interface-designer.yaml  product-owner.yaml  qa-engineer.yaml  security-analyst.yaml  senior-developer.yaml  spec-bootstrapper.yaml  spec-linter.yaml  tech-writer.yaml  ui-designer.yaml
src/sdd_server/: __init__.py  __main__.py
src/sdd_server/cli/: __init__.py  main.py
src/sdd_server/core/: __init__.py  aggregation.py  ai_client.py  alignment.py  code_generator.py  custom_plugin_manager.py  enforcement.py  execution.py  goose_session.py  initializer.py  lifecycle.py  metadata.py  recipe_generator.py  recipe_manager.py  role_engine.py  spec_decomposer.py  spec_manager.py  spec_validator.py  startup.py  streaming.py  task_manager.py
src/sdd_server/infrastructure/: __init__.py  config.py  exceptions.py  filesystem.py  git.py  retry.py
src/sdd_server/mcp/: __init__.py  app.py  server.py
tests/: conftest.py
tests/integration/: test_goose_round_trip.py  test_imports.py  test_smoke.py
tests/unit/: test_main.py
(+135 files in other folders)
